--- a/APPLI/SET_LIST/NEW/HTML/OPERATION/TABLE.HTML
+++ b/APPLI/SET_LIST/NEW/HTML/OPERATION/TABLE.HTML
@@ -29,7 +29,7 @@
                                 <span class="caret"></span>
                             </button>
                             <ul class="dropdown-menu OPERATION" role="menu" name="NEW" id="category_ul_NEW">
-                                ###OPERATION_CATEGORY###
+                                ###CATEGORY###
                             </ul>
                         </div>
                         <div class="btn-group">
@@ -93,7 +93,7 @@
         </tr>
 
         <!--LIST 登録済セットの表示-->
-        ###OPERATION_TABLE_RECORDS###
+        ###TABLE_RECORDS###
    </tbody>
 </table>
 <!--</html>-->
