--- a/APPLI/SET_LIST/NEW/HTML/OPERATION/TABLE.HTML
+++ b/APPLI/SET_LIST/NEW/HTML/OPERATION/TABLE.HTML
@@ -88,7 +88,7 @@
             <td>ー</td>
              <!--ADDボタン-->
             <td>
-                <a class="btn btn-primary btn-sm btn-set" id="SET_ADD_NEW">ADD</a>
+                <a class="btn btn-primary btn-sm btn-set" id="ADD_NEW">ADD</a>
             </td>
         </tr>
 
