--- a/APPLI/SET_LIST/NEW/HTML/SET/TABLE.HTML
+++ b/APPLI/SET_LIST/NEW/HTML/SET/TABLE.HTML
@@ -34,24 +34,23 @@
                             </ul>
                         </div>
                         <div class="btn-group">
-                            <input type="text" name="SET_CATEGORY_NM_NEW" id="SET_CATEGORY_NM_NEW" value="###SET_CATEGORY_NM###" class="form-control input-sm" disabled placeholder="セットカテゴリ"/>
+                            <input type="text" name="SET_CATEGORY_NM_NEW" id="SET_CATEGORY_NM_NEW" value="" class="form-control input-sm" disabled placeholder="セットカテゴリ"/>
                         </div>
                     </div>
-                    <input type="hidden" name="SET_CATEGORY_NM_HID_NEW" id="SET_CATEGORY_NM_HID_NEW" value="###SET_CATEGORY_NM_HID###" class="form-control" />
-                    <input type="hidden" name="SET_CATEGORY_NO_HID_NEW" id="SET_CATEGORY_NO_HID_NEW" value="###SET_CATEGORY_NO_HID###" class="form-control" />
+                    <input type="hidden" name="SET_CATEGORY_NO_HID_NEW" id="SET_CATEGORY_NO_HID_NEW" value="" class="form-control" />
                 </div>
             </td>
             <!--セット名-->
             <td>
-                            <input type="text" id="SET_NM_NEW" name="SET_NM_NEW" value="###SET_NM###" class="form-control input-sm" style="" placeholder="セット名" >
+                            <input type="text" id="SET_NM_NEW" name="SET_NM_NEW" value="" class="form-control input-sm" style="" placeholder="セット名" >
             </td>
              <!--セット価格-->
             <td>
-                <input type="number" id="SET_PRICE_NEW" name="SET_PRICE_NEW" value="###SET_PRICE###" class="form-control input-sm" style="" placeholder="セット税抜価格" >
+                <input type="number" id="SET_PRICE_NEW" name="SET_PRICE_NEW" value="" class="form-control input-sm" style="" placeholder="セット税抜価格" >
             </td>
              <!--備考-->
             <td>
-                <input type="text" id="NEW_SET_REMARKS" name="SET_REMARKS_NEW" value="###SET_REMARKS###" class="form-control input-sm" style="" placeholder="備考" >
+                <input type="text" id="SET_REMARKS_NEW" name="SET_REMARKS_NEW" value="" class="form-control input-sm" style="" placeholder="備考" >
             </td>           
             <!--NEWボタン-->
             <td>
