--- a/APPLI/SET_LIST/LISTS/HTML/RECORDS.HTML
+++ b/APPLI/SET_LIST/LISTS/HTML/RECORDS.HTML
@@ -3,54 +3,25 @@
 <!--SET LISTS Records-->
 l
 <!--RECORDS-->
-<!-- R1 -->
 <tr id="edit-row-%2">
     <td rowspan="3">%1</td>
     <td rowspan="3">
-        <span class="label label-default">%2</spanl
+        <span class="label label-default">%2</span>
     </td>
-		<!--R1 セットカテゴリ-->
+		<!--セットカテゴリ-->
     <td>
         <div class="edit">
             <div class="form-group">
-                <div class="btn-group">
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-info dropdown-toggle input-sm" data-toggle="dropdown" id="set_category_%2" aria-expended="false">
-                            <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu SET" role="menu" name="%2">
-                            ###SET_CATEGORY###
-                        </ul>
-                    </div>
-                    <div class="btn-group">
-                        <input type="text" name="SET_CATEGORY_NM_%2" id="SET_CATEGORY_NM_%2" value="%3" class="form-control input-sm" disabled />
-                    </div>
-                    <input type="hidden" name="SET_CATEGORY_NM_HID_%2" id="SET_CATEGORY_NM_HID_%2" value="%3" class="form-control" />
-                    <input type="hidden" name="SET_CATEGORY_NO_HID_%2" id="SET_CATEGORY_NO_HID_%2" value="%2" class="form-control" />
-                    <input type="hidden" name="SET_CATEGORY_NX_HID_%2" id="SET_CATEGORY_NX_HID_%2" value="%2" class="form-control" />
-                </div>
+                <input type="text" name="SET_CATEGORY_NM_%2" id="SET_CATEGORY_NM_%2" value="%3" class="form-control input-sm" disabled />
+                <input type="hidden" name="SET_CATEGORY_NO_HID_%2" id="CATEGORY_NO_HID_%2" value="%2" class="form-control" disabled=disabled/>
             </div>
         </div>
     </td>
-		<!--R1 作業カテゴリ-->
+		<!--セット名-->
 		<td>
 		    <div class="form-group">
-		        <div class="btn-group">
-		            <div class="btn-group">
-		                <button type="button" class="btn dropdown-toggle input-sm category" id="operation_categogy_%2" data-toggle="dropdown" aria-expended="false">
-		                    <span class="caret"></span>
-		                </button>
-		                <ul class="dropdown-menu OPERATION" role="menu" name="%2" id="category_ul_%2">
-		                    ###OPERATION_CATEGORY###
-		                </ul>
-		            </div>
-		            <div class="btn-group">
-		                <input type="text" name="OPERATION_CATEGORY_NM_%2" id="OPERATION_CATEGORY_NM_%2" value="%6" class="form-control input-sm" disabled placeholder="作業カテゴリ"/>
-		            </div>
-		        </div>
-		        <input type="hidden" name="OPERATION_CATEGORY_NM_HID_%2" id="OPERATION_CATEGORY_NM_HID_%2" value="%7" class="form-control" />
-		        <input type="hidden" name="OPERATION_CATEGORY_NO_HID_%2" id="OPERATION_CATEGORY_NO_HID_%2" value="%6" class="form-control" />
-		        <input type="hidden" name="OPERATION_CATEGORY_NX_HID_%2" id="OPERATION_CATEGORY_NX_HID_%2" value="%6" class="form-control" />
+	          <input type="text" name="SET_NM_%2" id="SET_NM_%2" value="%6" class="form-control input-sm" disabled=disabled/>
+		        <input type="hidden" name="SET_NO_HID_%2" id="SET_NO_HID_%2" value="%5" class="form-control" />
 		    </div>
 		</td>
 		<!--R1 部品カテゴリ-->
@@ -77,144 +48,13 @@ l
 		<td></td>
 		<td></td>
     <td>
-        <a href="" class="btn btn-warning btn-sm" id="SET_EDIT_%2" onclick="editSet(%2); return false;" >EDIT</a>
+        <a class="btn btn-warning btn-sm btn-set" id="SET_EDIT_%2" >EDIT</a>
     </td>
     <td>
-        <a class="btn btn-danger btn-sm" id="SET_DELETE_%2" onclick="deleteSet(%2); return false;" >DEL</a>
-    </td>
-</tr>
-<!-- R2 -->
-<tr>
-    <!--R2 セット名-->
-    <td>
-        <div class="form-group">
-            <div class="btn-group">
-                <div class="btn-group">
-                    <button type="button" class="btn dropdown-toggle input-sm category btn-default" style="color: #fff;" disabled=disabled id="parts_categogy_%2" data-toggle="dropdown" aria-expended="false">
-                        <span class="caret"></span>
-                    </button>
-                </div>
-                <div class="btn-group">
-                    <input type="text" id="%2_SET_NAME" name="%2_SET_NAME" value="" class="form-control input-sm" style="" placeholder="セット名" >
-                </div>
-            </div>
-        </div>
-    </td>
-    <!--R2 作業名-->
-    <td>
-        <div class="form-group">
-            <div class="btn-group">
-                <div class="btn-group">
-                    <div id="dropdown-operation-%2" class="btn-group">
-                        <button type="button" class="btn dropdown-toggle input-sm" id="operation_%2" data-toggle="dropdown" aria-expended="false">
-                            <span class="caret"></span>
-                        </button>
-                        <ul id="dropdown-operation-list-%2" class="dropdown-menu" role="menu" name="%2">
-                        </ul>
-                    </div>
-                    <div class="btn-group">
-                        <input type="text" name="OPERATION_NM_%2" id="OPERATION_NM_%2" value="%9" class="form-control input-sm" disabled placeholder="作業"/>
-                    </div>
-               </div>
-            </div>
-            <input type="hidden" name="OPERATION_HID_NM_%2" id="OPERATION_NM_HID_%2" value="%9" class="form-control" />
-            <input type="hidden" name="OPERATION_HID_NO_%2" id="OPERATION_NO_HID_%2" value="%8" class="form-control" />
-            <input type="hidden" name="OPERATION_HID_NX_%2" id="OPERATION_NX_HID_%2" value="%8" class="form-control" />
-        </div>
-    </td>
-    <!--R2部品名-->
-    <td>
-        <div class="form-group">
-            <div class="btn-group">
-                <div class="btn-group">
-                    <div id="dropdown-parts-%2" class="btn-group">
-                        <button type="button" class="btn dropdown-toggle input-sm" id="parts_%2" data-toggle="dropdown" aria-expended="false">
-                            <span class="caret"></span>
-                        </button>
-                        <ul id="dropdown-parts-list-%2" class="dropdown-menu" role="menu" name="%2">
-                        </ul>
-                    </div>
-                    <div class="btn-group">
-                        <input type="text" name="PARTS_NM_%2" id="PARTS_NM_%2" value="%14" class="form-control input-sm" disabled placeholder="パーツ"/>
-                    </div>
-               </div>
-            </div>
-            <input type="hidden" name="PARTS_NO_HID_%2" id="PARTS_NO_HID_%2" value="%13" class="form-control" />
-            <input type="hidden" name="PARTS_NX_HID_%2" id="PARTS_NX_HID_%2" value="%13" class="form-control" />
-        </div>
-    </td>
-    <!--R2 QTY-->
-    <td>
-        <div class="btn-group">
-            <div class="btn-group">
-                <button type="button" class="btn btn-md input-sm btn-plus" id="qty_plus_%2">+</button>
-            </div>
-            <div class="btn-group">
-                <input type="text" name="PARTS_QTY_%2" id="PARTS_QTY_%2" value="%15" class="form-control input-sm" disabled placeholder="数量" style="width:3em"/>
-            </div>
-            <div class="btn-group">
-                <button type="button" class="btn btn-md input-sm btn-minus" id="qty_minus_%2">-</button>
-            </div>
-        </div>
-    </td>
-    <td>
+        <a class="btn btn-danger btn-sm btn-set" id="SET_DELETE_%2" >DEL</a>
     </td>
 </tr>
-
-<!-- R3 -->
-<tr>
-    <!--R3 セット価格-->
-    <td>
-        <div class="form-group">
-            <div class="btn-group">
-                <div class="btn-group">
-                    <button type="button" class="btn dropdown-toggle input-sm category btn-default" style="color: #fff;" disabled=disabled id="parts_categogy_new" data-toggle="dropdown" aria-expended="false">
-                        <span class="caret"></span>
-                    </button>
-                </div>
-                <div class="btn-group">
-                    <input type="number" id="%2_SET_PRICE" name="%2_SET_PRICE" value="%17" class="form-control input-sm" style="" placeholder="セット税抜価格" >
-                </div>
-            </div>
-        </div>
-    </td>
-    <!--R3 作業価格-->
-    <td>
-        <div class="form-group">
-            <div class="btn-group">
-                <div class="btn-group">
-                    <button type="button" class="btn dropdown-toggle input-sm category btn-default" style="color: #fff;" disabled=disabled id="parts_categogy_new" data-toggle="dropdown" aria-expended="false">
-                        <span class="caret"></span>
-                    </button>
-                </div>
-                <div class="btn-group"> 
-                    <input type="number" id="%2_SET_PRICE" name="%2_OPERATION_PRICE" value="%10" class="form-control input-sm" style="" placeholder="作業税抜価格" >
-                </div>
-            </div>
-        </div>
-    </td>
-    <!--R3 部品価格-->
-    <td>
-        <div class="form-group">
-            <div class="btn-group">
-                <div class="btn-group">
-                    <button type="button" class="btn dropdown-toggle input-sm category btn-default" style="color: #fff;" disabled=disabled id="parts_categogy_%2" data-toggle="dropdown" aria-expended="false">
-                        <span class="caret"></span>
-                    </button>
-                </div>
-                <div class="btn-group">
-                    <input type="number" id="%2_SET_PRICE" name="%2_PARTS_PRICE" value="%16" class="form-control input-sm" style="" placeholder="部品税抜価格" >
-                </div>
-            </div>
-        </div>
-    </td>
-    <td></td>
-    <!--R3 備考-->
-    <td>
-        <input type="text" id="%2_SET_REMARKS" name="%2_SET_REMARKS" value="%18" class="form-control input-sm" style="" placeholder="備考" >
-    </td>           
-</tr>
-
+          
 <!--RECORDS-->
 
 <!--</html>-->
